spec/changes: DE-017 complete

--- a/change/deltas/DE-017-add-category-support-to-requirements/DE-017.md
+++ b/change/deltas/DE-017-add-category-support-to-requirements/DE-017.md
@@ -4,7 +4,7 @@ slug: add-category-support-to-requirements
 name: Delta - Add category support to requirements
 created: '2025-11-04'
 updated: '2025-11-04'
-status: in-progress
+status: completed
 kind: delta
 aliases: []
 relations:
