--- a/change/deltas/DE-017-add-category-support-to-requirements/DE-017.md
+++ b/change/deltas/DE-017-add-category-support-to-requirements/DE-017.md
@@ -8,7 +8,7 @@ status: completed
 kind: delta
 aliases: []
 relations:
-  - type: implements
+  - type: relates_to
     target: IMPR-001
     note: Add category support to requirements
 applies_to:
