--- a/change/deltas/DE-018-add-tags-column-to-list-table-output-for-all-artifact-types/DE-018.md
+++ b/change/deltas/DE-018-add-tags-column-to-list-table-output-for-all-artifact-types/DE-018.md
@@ -4,7 +4,7 @@ slug: add-tags-column-to-list-table-output-for-all-artifact-types
 name: Delta - Add Tags column to list table output for all artifact types
 created: '2025-11-04'
 updated: '2025-11-04'
-status: draft
+status: completed
 kind: delta
 aliases: []
 relations: []
