chore: tag deltas for screenshot

--- a/change/deltas/DE-005-implement-spec-backfill/DE-005.md
+++ b/change/deltas/DE-005-implement-spec-backfill/DE-005.md
@@ -8,6 +8,7 @@ status: complete
 kind: delta
 aliases: []
 relations: []
+tags: ["agent"]
 applies_to:
   specs:
   - PROD-007
@@ -165,7 +166,7 @@ Key pain points addressed:
 **Backlog Items**:
 - Create tech spec defining implementation details (CLI API, detection algorithms, etc.)
 - Design stub detection algorithm with edge case handling
-- Create `.claude/commands/supekku.backfill.md` agent command 
+- Create `.claude/commands/supekku.backfill.md` agent command
 - Implement `supekku/cli/backfill.py` module
 - ensure tech specs auto-created with status 'stub'
 
