--- a/change/deltas/DE-006-standardize-cli-json-output-support/DE-006.md
+++ b/change/deltas/DE-006-standardize-cli-json-output-support/DE-006.md
@@ -7,6 +7,7 @@ updated: '2025-11-02'
 status: complete
 kind: delta
 aliases: []
+tags: ["cli"]
 relations:
   - type: resolves
     target: ISSUE-007
