--- a/change/deltas/DE-010-policy-and-standard-management/DE-010.md
+++ b/change/deltas/DE-010-policy-and-standard-management/DE-010.md
@@ -7,6 +7,7 @@ updated: '2025-11-03'
 status: completed
 kind: delta
 aliases: []
+tags: ["cli", "entities", "governance"]
 relations: []
 applies_to:
   specs:
