--- a/change/deltas/DE-015-implement-backlog-prioritization-with-interactive-ordering/DE-015.md
+++ b/change/deltas/DE-015-implement-backlog-prioritization-with-interactive-ordering/DE-015.md
@@ -6,6 +6,7 @@ created: '2025-11-04'
 updated: '2025-11-04'
 status: completed
 kind: delta
+tags: ["cli","backlog"]
 aliases: []
 relations: []
 applies_to:
