--- a/change/deltas/DE-002-python-package-level-spec-granularity/DE-002.md
+++ b/change/deltas/DE-002-python-package-level-spec-granularity/DE-002.md
@@ -7,6 +7,7 @@ updated: '2025-11-02'
 status: completed
 kind: delta
 aliases: []
+tags: ["AST", "python"]
 relations:
   - type: satisfies
     target: PROD-005
