--- a/change/deltas/DE-003-cli-integration-for-frontmatter-schema-show-commands/DE-003.md
+++ b/change/deltas/DE-003-cli-integration-for-frontmatter-schema-show-commands/DE-003.md
@@ -7,6 +7,7 @@ updated: '2025-11-02'
 status: completed
 kind: delta
 aliases: []
+tags: ["cli"]
 relations:
   - type: implements
     target: PROD-004.FR-004
