--- a/change/deltas/DE-008-add-coverage-evidence/DE-008.md
+++ b/change/deltas/DE-008-add-coverage-evidence/DE-008.md
@@ -7,6 +7,7 @@ updated: '2025-11-03'
 status: completed
 kind: delta
 aliases: []
+tags: ["schema"]
 relations:
   - type: addresses
     target: ISSUE-012
