--- a/change/deltas/DE-016-remove-phase-01-auto-creation-and-enable-intelligent-phase-creation/DE-016.md
+++ b/change/deltas/DE-016-remove-phase-01-auto-creation-and-enable-intelligent-phase-creation/DE-016.md
@@ -7,6 +7,7 @@ updated: '2025-11-04'
 status: completed
 kind: delta
 aliases: []
+tags: ["implementation", "create"]
 relations: []
 applies_to:
   specs:
