--- a/change/deltas/DE-017-add-category-support-to-requirements/DE-017.md
+++ b/change/deltas/DE-017-add-category-support-to-requirements/DE-017.md
@@ -7,6 +7,7 @@ updated: '2025-11-04'
 status: completed
 kind: delta
 aliases: []
+tags: ["cli", "requirements"]
 relations:
   - type: relates_to
     target: IMPR-001
