fix: ok it works, tidy up

--- a/change/deltas/DE-018-add-tags-column-to-list-table-output-for-all-artifact-types/DR-018.md
+++ b/change/deltas/DE-018-add-tags-column-to-list-table-output-for-all-artifact-types/DR-018.md
@@ -12,10 +12,47 @@ relations:
 - type: implements
   target: DE-018
 delta_ref: DE-018
-source_context: []
-code_impacts: []
-verification_alignment: []
-design_decisions: []
+source_context:
+- ISSUE-017
+- DE-010
+code_impacts:
+- path: supekku/scripts/lib/formatters/decision_formatters.py
+  type: modify
+  impact: Add Tags column to table output
+- path: supekku/scripts/lib/formatters/spec_formatters.py
+  type: modify
+  impact: Add Tags column to table output
+- path: supekku/scripts/lib/formatters/change_formatters.py
+  type: modify
+  impact: Add Tags column to table output
+- path: supekku/scripts/lib/formatters/requirement_formatters.py
+  type: modify
+  impact: Add Tags column to table output
+- path: supekku/scripts/lib/formatters/backlog_formatters.py
+  type: modify
+  impact: Add Tags column to table output
+verification_alignment:
+- id: VT-018-001
+  type: new
+  note: Unit tests for decision_formatters
+- id: VT-018-002
+  type: new
+  note: Unit tests for spec_formatters
+- id: VT-018-003
+  type: new
+  note: Unit tests for change_formatters
+- id: VT-018-004
+  type: new
+  note: Unit tests for requirement_formatters
+- id: VT-018-005
+  type: new
+  note: Unit tests for backlog_formatters
+- id: VA-018-001
+  type: new
+  note: Visual consistency review
+design_decisions:
+- Reuse DE-010 pattern rather than create abstraction
+- Tags column placement varies by formatter type
 open_questions: []
 ---
 
