doc: javascript is dumb

--- a/change/deltas/DE-019-fix-ts-doc-extract-dependency-handling/DE-019.md
+++ b/change/deltas/DE-019-fix-ts-doc-extract-dependency-handling/DE-019.md
@@ -12,6 +12,9 @@ applies_to:
   specs:
   - SPEC-124
   requirements: []
+context_inputs:
+  - type: issue
+    id: ISSUE-021
 ---
 
 # DE-019 – Fix ts-doc-extract dependency handling
