--- a/change/deltas/DE-019-fix-ts-doc-extract-dependency-handling/DR-019.md
+++ b/change/deltas/DE-019-fix-ts-doc-extract-dependency-handling/DR-019.md
@@ -84,6 +84,7 @@ open_questions: []
 - Auto-installation of ts-doc-extract during sync (prompting not allowed in non-interactive context)
 - Validation of ts-doc-extract version compatibility
 - Doctor command implementation (separate delta, ISSUE-022)
+- Module granularity improvements (see section 11 for future work)
 
 ## 3. Architecture Intent
 
@@ -365,3 +366,150 @@ Call from `initialize_workspace()` after directory structure created.
 - Verify warning printed with correct install instructions
 - Verify sync succeeds (doesn't fail)
 - Verify no TypeScript contracts generated
+
+## 11. Future Work: Module Granularity
+
+### Current Problem
+
+The TypeScript adapter currently creates **one spec per file** for "significant" standalone files (`typescript.py:221-252`), which produces excessive granularity:
+
+- Test case: Medium-sized NextJS project (~1134 files) generated **119 specs**
+- Most contracts are tiny (only ~3 have >100 lines)
+- Navigation is difficult: deep symlink trees mirroring individual files
+- Violates PROD-012.FR-015 (cohesive, right-sized scope)
+
+**Root cause**: `_find_logical_modules()` treats every "significant" file as a module:
+```python
+# Lines 221-248: Find significant standalone files
+for pattern in ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]:
+  for file in src_dir.glob(pattern):
+    ...
+    is_significant = (
+      depth <= 1  # Top 2 levels
+      or any(part in important_dirs for part in rel_path.parts)
+    )
+    if is_significant:
+      modules.append(file)  # Each file becomes a module!
+```
+
+### Python/Go Pattern: Leaf Package Detection
+
+Python adapter uses **leaf packages** - packages that have no child packages (`package_utils.py:17-52`):
+
+```python
+def is_leaf_package(path: Path) -> bool:
+  """A leaf package:
+  1. Contains an __init__.py file (is a Python package)
+  2. Has no child directories that are also packages
+  """
+  if not path.is_dir() or not (path / "__init__.py").exists():
+    return False
+
+  # Check for child packages
+  for child_dir in path.iterdir():
+    if child_dir.is_dir() and (child_dir / "__init__.py").exists():
+      return False  # Has child package, not a leaf
+
+  return True
+```
+
+**Evaluation against criteria**:
+- ✅ **Deterministic**: Based purely on `__init__.py` presence
+- ✅ **Stable**: Only changes when package structure changes intentionally
+- ✅ **Exhaustive**: Every file is in some package (or orphaned at top level)
+- ✅ **Exclusive**: Each file in exactly one leaf package
+- ✅ **Cohesive**: Developers already organize code into coherent packages
+
+### Proposed: TypeScript Leaf Module Detection
+
+**TypeScript equivalent**: Find all directories with `index.ts` (or `index.tsx/js/jsx`) that have no child directories with index files.
+
+**Algorithm**:
+```python
+def is_leaf_module(path: Path) -> bool:
+  """A leaf module:
+  1. Contains an index file (index.ts/tsx/js/jsx)
+  2. Has no child directories that also contain index files
+  """
+  if not path.is_dir():
+    return False
+
+  # Must have index file to be a module boundary
+  has_index = any((path / f"index.{ext}").exists()
+                  for ext in ["ts", "tsx", "js", "jsx"])
+  if not has_index:
+    return False
+
+  # Check for child modules
+  for child_dir in path.iterdir():
+    if child_dir.is_dir():
+      has_child_index = any((child_dir / f"index.{ext}").exists()
+                            for ext in ["ts", "tsx", "js", "jsx"])
+      if has_child_index:
+        return False  # Has child module, not a leaf
+
+  return True
+
+def find_all_leaf_modules(root: Path) -> list[Path]:
+  """Find all leaf modules under root directory.
+
+  Strategy:
+  1. Find all directories containing index files (modules)
+  2. Filter to only those with no child modules (leaves)
+  3. Return sorted list
+  """
+  # Find all modules (dirs with index files)
+  all_modules = set()
+  for ext in ["ts", "tsx", "js", "jsx"]:
+    for index_file in root.rglob(f"index.{ext}"):
+      all_modules.add(index_file.parent)
+
+  # Filter to leaf modules
+  leaf_modules = []
+  for module in all_modules:
+    has_child = any(
+      other != module and other.is_relative_to(module)
+      for other in all_modules
+    )
+    if not has_child:
+      leaf_modules.append(module)
+
+  return sorted(leaf_modules)
+```
+
+**Handling orphaned files** (no index.ts ancestor):
+
+Option 1: **Top-level directory grouping**
+- Files without index.ts ancestor get grouped by their top-level src/ subdirectory
+- Example: `src/services/fooService.ts` (no index) → spec for `src/services/`
+
+Option 2: **Per-file specs for orphans only**
+- Leaf modules get one spec per module
+- Orphaned files get individual specs (but there should be few)
+
+**Recommendation**: Option 1 - top-level directory grouping for orphans. Encourages better structure (add index files) while handling legacy code gracefully.
+
+### Benefits
+
+- **Reduced granularity**: Expected ~10-30 specs instead of ~100+ for typical projects
+- **Respects developer intent**: `index.ts` already signals "this is a module boundary"
+- **Stable**: Boundaries only change when developers add/remove index files
+- **Navigable**: Symlink trees follow logical module structure, not individual files
+- **Language-consistent**: Mirrors Python's `__init__.py` pattern
+
+### Migration Strategy
+
+1. Implement `find_all_leaf_modules()` in TypeScript adapter
+2. Add fallback for orphaned files (top-level directory grouping)
+3. Test on diverse TypeScript/NextJS repos
+4. Update existing generated specs (may require manual review/migration)
+
+### Acceptance Criteria
+
+- Medium NextJS project (~1000 files) generates 10-30 specs, not 100+
+- Each spec contract >50 lines on average (meaningful content)
+- Symlink navigation intuitive (follows module boundaries)
+- All files covered (exhaustive)
+- No file in multiple specs (exclusive)
+
+**Timeline**: Separate delta post-DE-019 (dependency handling must land first)
